fix: fixed wrong margin on the header in styles.css

--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@
      padding: .5rem;
      text-align: center;
      margin-bottom: 32px;
+     margin-top: 0px;
      border-bottom-left-radius: 20px;
      border-bottom-right-radius: 20px;
  }
